# cuda_matrixmul

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main.cu
cublas_kernel/: CMakeLists.txt  cublas_kernel.cu  cublas_kernel.h
maltrixmul_kernel/: CMakeLists.txt  matrixmul_kernel.cu  matrixmul_kernel.h
matrixmul_kernel/: CMakeLists.txt  matrixmul_kernel.cu  matrixmul_kernel.h
